--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Plataforma de Domicilios en Moto - Entrega rápida y eficiente." />
+    <meta name="keywords" content="domicilios, entrega en moto, pedidos en línea" />
+    <meta name="author" content="Tu Nombre" />
     <title>Plataforma de Domicilios</title>
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <style>
+      /* Estilos básicos para la carga inicial */
+      #root {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+        font-family: sans-serif;
+        background-color: #f3f4f6;
+      }
+    </style>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" aria-label="Aplicación de Plataforma de Domicilios"></div>
   </body>
 </html>
